responsive-delivery-website-main/assets/css/styles.css
/* ... */
.footer__button:hover{
  background-color: var(--first-color-alt);
}

.footer__copy{
  display: block;
  margin-top: 5rem;
  text-align: center;
  color: var(--text-color-light);
  font-size: var(--small-font-size);
}
/*=============== SCROLL BAR ===============*/
::-webkit-scrollbar{
  width: 0.6rem;
  border-radius: 1rem;
  background-color: hsl(45, 32%, 70%);
}

::-webkit-scrollbar-thumb{
  border-radius: 1rem;
  background-color: hsl(45, 32%, 60%);
}

::-webkit-scrollbar:hover{
  background-color: hsl(45, 32%, 50%);
}

/*=============== SCROLL UP ===============*/
.scrollup{
  position: fixed;
  right: 1rem;
  bottom: -50%;
  background-color: var(--body-color);
  box-shadow: var(--shadow-big);
  color: var(--title-color);
  display: inline-flex;
  padding: 6px;
  font-size: 1.5rem;
  border-radius: .75rem;
  z-index: var(--z-tooltip);
  transition: bottom .4s, transform .4s, background-color .4s, color .4s ;
}

.scrollup:hover{
  transform: translateY(-.5rem);
}

/* Show Scroll Up */
.show-scroll{
  bottom: 3rem ;
}

/*=============== BREAKPOINTS ===============*/
/* For small devices */
@media screen and (max-width: 360px){
  .container{
    margin-inline: 1rem;
  }

  .home__image,
  .reviews__image,
  .app__image,
  .map__area{
    width: 100%;
  }

  .menu__container{
    grid-template-columns: 180px;
    justify-content: center;
  }

  .reviews__container{
    row-gap: 4rem;
  }

  .reviews__img{
    left: 1rem;
  }

  .reviews__comment{
    width: 85%;
  }

  .footer__content{
    gap: 2rem;
  }
  
}

/* For medium devices */
@media screen and (min-width: 540px){
  .nav__menu{
    width: 50%;
  }

  .home__container,
  .reviews__container{
    grid-template-columns: 380px;
    justify-content: center;
  }

  .menu__container{
    grid-template-columns: repeat(2, 180px );
    justify-content: center;
  }

  .app__container{
    width: 380px;
    margin-inline: auto;
  }

  .map__container{
    width: 100%;
    height: 100%;
    justify-content: center;
    display: flex;
  }

  .footer__form{
    width: 360px;

  }
}

@media screen and (min-width: 768px){
  .service__container{
    grid-template-columns: repeat(2, 220px);
  }

  .menu__container{
    grid-template-columns: repeat(3, 180px);
  }

  .footer__content{
    grid-template-columns: repeat(3, max-content);
  }
  .footer__newsletter{
    grid-column: initial;
  }
}
/* ... */

